# zenbook_scripts

./: .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  PLANNED.md  README.fn_row_policy.md  README.md  README.plasma.md  README.ux5400.md  README.ux581.md  README.ux8406.md  ROADMAP.md  backlight.py  brightness.py  brightness.sh  configure.py  configure.sh  configure_gui.py  fan-control.json.example  kbd_test.sh  kmod_deploy.sh  touchpad.json.example  zenbook-duo.conf.example  zenbook-hotkeys.conf.example
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
conf.d/: 00-default.evdev.conf  README.md  UX5400EA.README  UX8406.evdev.conf  UX8406.usb.conf  UX8406CA.evdev.conf  UX8406MA.evdev.conf
contrib/acpi/: zenbook-kbd-brightness  zenbook-kbd-sleep.sh
contrib/desktop/: zenbook-bt-fn-row-STOP.desktop  zenbook-bt-fn-row-STOP.sh
contrib/modprobe/: zenbook-hid-asus.conf
contrib/openrc/: zenbook-bt-fn-row  zenbook-fan-control-hook.sh  zenbook-hid-asus-boot.sh  zenbook-kb-fan-control  zenbook-kb-hid-asus  zenbook-kb-hotkeys  zenbook-kb-lid  zenbook-platform-touchpad  (+4 more)
kernel/: .gitignore  Makefile  README.md
lib/: detect.sh  fan.sh  fn_lock.sh  hidraw.sh  limits.sh  openrc-wait.sh  platform_profile.sh  protocol.sh  screenpad.sh  snapshot.sh  state.sh  transport_bluetooth.sh  transport_usb.sh
packaging/: README.md
plasma/: README.md  session.json.example
plasma/kcm/: CMakeLists.txt  build.sh
plasma/kcm/src/: CMakeLists.txt  kcm_zenbook_platform.json  zenbookplatform.cpp  zenbookplatform.h
plasma/kcm/src/ui/: AboutPage.qml  DuoDisplaysPage.qml  OverviewPage.qml  SleepResumePage.qml  main.qml
tests/: test_fn_row_policy.py  test_pidfile.py  test_touchpad_pipeline.py
zenbook_kb/: __init__.py  calibrate.py  detect.py  dmi.py  fan_control.py  fn_lock.py  hotkey.py  install.py  kernel_preflight.py  keycodes.py  limits.py  mappings.py  metrics.py  paths.py  pidfile.py  power.py  priv.py  protocol.py  runner.py  snapshot.py  sniff.py  state.py  touchpad.py  usb_hotkeys.py  users.py
(+54 files in other folders)
